# rust-weather-data-parser

./: Cargo.toml  LICENSE  README.md  weather_data.csv
src/: main.rs
