[package]
name = "slight-parser"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.6"
serde = { version = "1.0.130", features = ["derive"] }
